# otvdm

./: CMakeLists.txt  README.md
gdi/: gdi.c
krnl386/: ne_module.c
